python/test-data/testTypesProtos6.err
Traceback (most recent call last):
  File "test-data/testTypesProtos6.py", line 57, in <module>
    print(computeTotalSize(root))
  File "test-data/testTypesProtos6.py", line 50, in computeTotalSize
    fs.accept(visitor)
  File "test-data/testTypesProtos6.py", line 19, in accept
    visitor.visitDirectory(self)
  File "test-data/testTypesProtos6.py", line 41, in visitDirectory
    c.accept(self)
  File "test-data/testTypesProtos6.py", line 28, in accept
    visitor.visitFile(self)
WyppTypeError: TotalSizeVisitor does not implement parent FileSystemVisitor
given:    <__wypp__.TotalSizeVisitor object at 0x00>
expected: value of type FileSystemVisitor

declared at: test-data/testTypesProtos6.py:36
declared at: test-data/testTypesProtos6.py:33
caused by: test-data/testTypesProtos6.py:36
  | class TotalSizeVisitor(FileSystemVisitor):
caused by: test-data/testTypesProtos6.py:42
  |     def visitFile(self, file: str):

Argument file of method visitFile violates the type declared by the parent FileSystemVisitor.
Annotation str is incompatible with the parent's annotation File.

given:    <__wypp__.File object at 0x00>
expected: value of type str

context: visitFile(self: Self, file: str) -> None
                                     ^^^
declared at: test-data/testTypesProtos6.py:42
declared at: test-data/testTypesProtos6.py:33
caused by: test-data/testTypesProtos6.py:42
  |     def visitFile(self, file: str):
